# Trendify

./: .envexample  .gitignore  devserver.sh  pyproject.toml  requirements.txt
src/: __init__.py  auth.py  models.py
src/api/: auth.py  campaigns.py  submissions.py
src/tests/: req.py  test_auth.py  test_campaigns.py
